--- a/assets/stylesheets/source/base/_forms.scss
+++ b/assets/stylesheets/source/base/_forms.scss
@@ -5,17 +5,16 @@
 // Variables
 // ----------------------------------------------------------------------------
 
+// Legend
 $legend-color:                  $text-color;
 $legend-border-color:           $border-color-base;
 
+// Inputs
 $input-height:                  ($line-height-base + ($padding-base-vertical * 2) + 2) !default; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-
 $input-bg:                      white !default;
 $input-bg-disabled:             $gray-lighter !default;
-
 $input-color:                   $gray !default;
 $input-color-placeholder:       $gray-light !default;
-
 $input-border:                  $border-color-base !default;
 $input-border-radius:           $border-radius-base !default;
 $input-border-size:             $border-size-base !default;
