Remove legacy emphasis tags

--- a/assets/stylesheets/source/base/_emphasis.scss
+++ b/assets/stylesheets/source/base/_emphasis.scss
@@ -2,11 +2,11 @@
 // Emphasis
 // ============================================================================
 
-b, strong {
+strong {
   font-weight: $font-weight-bold;
 }
 
-em, i {
+em {
   font-style: italic;
 }
 
