--- a/assets/stylesheets/source/base/_lists.scss
+++ b/assets/stylesheets/source/base/_lists.scss
@@ -4,7 +4,12 @@
 
 // @todo: lists: http://j.eremy.net/align-lists-flush-left/
 
+// Variables
+$dl-offset-horizontal: 12rem;
+
 // Unordered and ordered lists
+// ----------------------------------------------------------------------------
+
 ul, ol {
   @include margin(0 0 1);
 
@@ -13,14 +18,22 @@ ul, ol {
   }
 }
 
+// Unstyled
+// ----------------------------------------------------------------------------
+
 // Unstyled keeps list items block level, just removes default browser padding
 // and list-style
+
 .list-unstyled {
   list-style: none;
   padding-left: 0;
 }
 
+// Inline
+// ----------------------------------------------------------------------------
+
 // Inline turns list items into inline-block
+
 .list-inline {
   @extend .list-unstyled;
 
@@ -36,6 +49,8 @@ ul, ol {
 }
 
 // Description Lists
+// ----------------------------------------------------------------------------
+
 dl {
   @include margin(0 0 1);
 }
@@ -53,11 +68,10 @@ dd {
 }
 
 // Horizontal description lists
-//
-// Defaults to being stacked without any of the below styles applied, until the
-// grid breakpoint is reached.
+// ----------------------------------------------------------------------------
 
-$dl-offset-horizontal: 12rem;
+// Defaults to being stacked without any of the below styles applied until the
+// grid breakpoint is reached.
 
 @include media($grid-break) {
   .dl-horizontal {
