--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -7,6 +7,10 @@
 // selectors. They define the default styling for how that element should look
 // in all occurrences on the page.
 // @source: http://smacss.com/book/type-base
+//
+// This is a manifest file used to import stylesheet partials. To add new
+// styles, create a new `.scss` file and import it below. All partials
+// should begin with an underscore.
 
 // Base
 @import "normalize";
