--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -5,6 +5,10 @@
 // Import global variables, functions, and mixins here. Anything that lives on
 // this level should be generic and applicable scross the entire project.
 // Component-specific mixins or variables should live at the component level.
+//
+// This is a manifest file used to import stylesheet partials. To add new
+// styles, create a new `.scss` file and import it below. All partials
+// should begin with an underscore.
 
 // Libraries
 @import "lib/bourbon/bourbon";       // v3.2.0.beta.2
