--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -12,9 +12,9 @@
 // Author:     Andy Smith
 // Source:     http://github/com/andyra/proto
 
-// This file is only used to import other stylesheets. To add new styles, create
-// a new `.scss` file and import it below. All imported files should begin with
-// an underscore.
+// This is a manifest file used to import stylesheet partials. To add new
+// styles, create a new `.scss` file and import it below. All partials
+// should begin with an underscore.
 
 @import "settings/settings";
 @import "base/base";
