--- a/assets/stylesheets/source/components/components.scss
+++ b/assets/stylesheets/source/components/components.scss
@@ -10,4 +10,15 @@
 // styles, create a new `.scss` file and import it below. All partials
 // should begin with an underscore.
 
-// @import "component-name";
+// Navigation
+
+// Media
+
+// Callouts
+
+// Content
+// @import "dropdowns";
+// @import "pricing";
+// @import "progress";
+// @import "accordion";
+// @import "tabs";
