--- a/assets/stylesheets/source/base/_lists.scss
+++ b/assets/stylesheets/source/base/_lists.scss
@@ -4,9 +4,6 @@
 
 // @todo: lists: http://j.eremy.net/align-lists-flush-left/
 
-// Variables
-$dl-offset-horizontal: 12rem;
-
 // Unordered and ordered lists
 // ----------------------------------------------------------------------------
 
@@ -48,8 +45,10 @@ ul, ol {
   }
 }
 
-// Description Lists
+// Definition Lists
 // ----------------------------------------------------------------------------
+
+$dl-offset-horizontal: 12rem;
 
 dl {
   @include margin(0 0 1);
