--- a/assets/stylesheets/src/settings/_debug.scss
+++ b/assets/stylesheets/src/settings/_debug.scss
@@ -14,7 +14,7 @@ $visual-grid-opacity:       0.5 !default;
 
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
 $visual-baseline:           true !default;
-// $visual-baseline-color:     000000 !default; // hex value without the #
+$visual-baseline-color:     $color-success !default; // hex value without the #
 
 // Show a ruler at the top of the page to help visualize breakpoint presets.
 // They will be automatically updated based on your settings in breakpoints.scss
