--- a/assets/stylesheets/src/styles.scss
+++ b/assets/stylesheets/src/styles.scss
@@ -17,5 +17,6 @@
 @import "components/components";
 
 h1 {
-  margin-bottom: $leading * 2; // only in rems
+  @include margin(1 0);
+  background-color: $color-info;
 }
