--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -14,7 +14,7 @@
 @import "lib/bourbon/bourbon";       // v3.2.0.beta.2
 @import "lib/neat/neat";             // v1.6.0.pre
 
-// // Functions
+// Functions
 @import "functions/absolute-unit";
 @import "functions/convert-unit";
 @import "functions/leading";
@@ -22,7 +22,7 @@
 @import "functions/relative-unit";
 @import "functions/strip-unit";
 
-// // Variables
+// Variables
 @import "breakpoints";
 @import "colors";
 @import "type";
@@ -31,21 +31,21 @@
 @import "grid";
 @import "main";
 
-// // Mixins
+// Mixins
 @import "mixins/debug";
 @import "mixins/font-feature-settings";
+@import "mixins/font-size";
 @import "mixins/font-smoothing";
 @import "mixins/headings";
 @import "mixins/hyphens";
 @import "mixins/img-responsive";
+@import "mixins/leading";
+@import "mixins/leading-borders";
 @import "mixins/placeholder";
+@import "mixins/rem";
 @import "mixins/tab-focus";
 @import "mixins/text-hide";
 @import "mixins/text-overflow";
 @import "mixins/visual-baseline";
-@import "mixins/leading";
 // @import "mixins/center-block";
-// @import "mixins/font-size";
-@import "mixins/leading-borders";
-@import "mixins/rem";
 // @import "mixins/text-emphasis-variant";
