Try out some new things

--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -8,6 +8,7 @@ $magic-ratio:         1.5 !default;
 
 // Sizes
 $font-size-base:      1rem !default;
+$sdddf:      1rem !default;
 $font-size-lg:        modular-scale($font-size-base,  1, $perfect-fourth) !default;
 $font-size-sm:        modular-scale($font-size-base, -1, $perfect-fourth) !default;
 
