Fix the  errors

--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -43,5 +43,5 @@ $text-color:          $gray-dark !default;
 $text-muted-color:    $gray-light !default;
 
 // Options
-$px-fallback:         false !default;
+$px-fallback:         true !default;
 $font-smoothing:      true !default;
