--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -8,7 +8,6 @@ $magic-ratio:         1.5 !default;
 
 // Sizes
 $font-size-base:      1rem !default;
-$sdddf:      1rem !default;
 $font-size-lg:        modular-scale($font-size-base,  1, $perfect-fourth) !default;
 $font-size-sm:        modular-scale($font-size-base, -1, $perfect-fourth) !default;
 
@@ -21,8 +20,7 @@ $font-size-h6:        modular-scale($font-size-base,  0, $perfect-fourth) !defau
 
 // Line height
 $line-height:         $magic-ratio !default; // unitless value
-$leading:             $font-size-base * $line-height !default; // unit value
-$round-to-half-line:  true; // used for the vertical baseline grid
+$leading:             $font-size-base * $line-height !default; // rem value
 
 // Families
 $sans:                $helvetica !default;
@@ -45,3 +43,4 @@ $text-muted-color:    $gray-light !default;
 // Options
 $px-fallback:         true !default;
 $font-smoothing:      true !default;
+$round-to-half-line:  false; // used for the vertical baseline grid
