--- a/assets/stylesheets/src/base/base.scss
+++ b/assets/stylesheets/src/base/base.scss
@@ -16,16 +16,16 @@
 @import "normalize";
 @import "main";
 
-// // Type
-// @import "code";
-// @import "emphasis";
-// @import "fancies";
-// @import "headings";
-// @import "links";
-// @import "lists";
-// @import "misc";
-// @import "paragraphs";
-// @import "quotes";
+// Type
+@import "code";
+@import "emphasis";
+@import "fancies";
+@import "headings";
+@import "links";
+@import "lists";
+@import "misc";
+@import "paragraphs";
+@import "quotes";
 
 // // Forms
 // @import "forms";
